- Fixed bug #47667 (ZipArchive::OVERWRITE seems to have no effect).
  (Mikko, Pierre)
- Fixed bug #47644 (Valid integers are truncated with json_decode()). (Scott)
- Fixed bug #47639 (pg_copy_from() WARNING: nonstandard use of \\ in a string
  literal). (Ilia)
- Fixed bug #47616 (curl keeps crashing). (Felipe)
- Fixed bug #47598 (FILTER_VALIDATE_EMAIL is locale aware). (Ilia)
- Fixed bug #47487 (performance degraded when reading large chunks after fix of
  bug #44607). (Arnaud)
- Fixed bug #47468 (enable cli|cgi-only extensions for embed sapi). (Jani)
- Fixed bug #47365 (ip2long() may allow some invalid values on certain 64bit  
  systems). (Ilia)
- Fixed bug #47435 (FILTER_FLAG_NO_PRIV_RANGE does not work with ipv6
  addresses in the filter extension). (Ilia)
- Fixed bug #47430 (Errors after writing to nodeValue parameter of an absent 
  previousSibling). (Rob)
- Fixed bug #47254 (Wrong Reflection for extends class). (Felipe)
- Fixed bug #46882 (Serialize / Unserialize misbehaviour under OS with
  different bit numbers). (Matt)
- Fixed bug #45997 (safe_mode bypass with exec/system/passthru (windows only)).
  (Pierre)
- Fixed bug #45822 (Near infinite-loops while parsing huge relative offsets).
  (Derick, Mike Sullivan)
- Fixed bug #45799 (imagepng() crashes on empty image). (Martin McNickle,
  Takeshi Abe)
- Fixed bug #45191 (error_log ignores date.timezone php.ini val when
  setting logging timestamps). (Derick)
- Fixed bug #45092 (header HTTP context option not being used when compiled
  using --with-curlwrappers). (Jani)
- Fixed bug #43073 (TrueType bounding box is wrong for angle<>0).
  (Martin McNickle)
- Fixed bug #38805 (PDO truncates text from SQL Server text data type
  field). (Steph)

26 Feb 2009, PHP 5.2.9
- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)

- Added optional sorting type flag parameter to array_unique(). Default is
  SORT_REGULAR. (Andrei)
